--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "TAPWA",
+  "name": "TAPWA — TA Logger",
   "short_name": "TAPWA",
   "start_url": "./",
   "scope": "./",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#0f1115",
   "theme_color": "#111111",
   "icons": [
     { "src": "./icon-192.png", "sizes": "192x192", "type": "image/png" },
